# Farseal

./: .gitignore  README.md  meson.build
src/: Farseal.f90  meson.build
subprojects/: test-drive.wrap
test/: CoolingTest.f90  main.f90  meson.build  test_anneal.f90  test_cooling.f90  test_objective.f90
test/helpers/: ising_test_setup.sage
